--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,13 +16,17 @@ project(mlone VERSION 1.0
     DESCRIPTION "simple cpu based neural network"
     LANGUAGES CXX)
 file(GLOB SOURCES "src/*.cpp")
-include_directories(include ${CMAKE_SOURCE_DIR}/build/_deps/googletest-src/googletest/include)
+file(GLOB TESTSRC "src/*.cpp")
+list(FILTER TESTSRC EXCLUDE REGEX "src/main.cpp")
+include_directories(${CMAKE_SOURCE_DIR}/build/_deps/googletest-src/googletest/include)
+include_directories(src/include)
 add_executable(mlone.exe ${SOURCES})
 enable_testing()
 file(GLOB TESTS "src/testing/*.cc")
 add_executable(
   tests.exe
-  ${TESTS})
+  ${TESTS}
+  ${TESTSRC})
 target_link_libraries(
   tests.exe
   GTest::gtest_main
