--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 26)
 set(CMAKE_CXX_COMPILER             "/usr/bin/clang++")
 set(ENABLE_FAST_MATH ON)
-set(CMAKE_CXX_FLAGS "-O3")
+# set(CMAKE_BUILD_TYPE Debug)
+ set(CMAKE_CXX_FLAGS "-O2")
 SET (CMAKE_C_COMPILER             "/usr/bin/clang")
 SET (CMAKE_AR      "/usr/bin/llvm-ar")
 SET (CMAKE_LINKER  "/usr/bin/llvm-ld")
@@ -32,13 +33,13 @@ file(GLOB TESTSRCCPP "src/*.cpp")
 list(FILTER TESTSRCCPP EXCLUDE REGEX "src/main.cpp")
 include_directories(src/include)
 add_executable(mlone.exe ${SOURCES})
-enable_testing() 
-add_executable(test.exe ${TESTSRC} ${TESTSRCCPP})
-
-target_link_libraries(
-  test.exe
-  GTest::gtest_main
-)
-
-include(GoogleTest)
-gtest_discover_tests(test.exe)
+# enable_testing() 
+# add_executable(test.exe ${TESTSRC} ${TESTSRCCPP})
+#
+# target_link_libraries(
+#   test.exe
+#   GTest::gtest_main
+# )
+#
+# include(GoogleTest)
+# gtest_discover_tests(test.exe)
