--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,13 +32,13 @@ file(GLOB TESTSRCCPP "src/*.cpp")
 list(FILTER TESTSRCCPP EXCLUDE REGEX "src/main.cpp")
 include_directories(src/include)
 add_executable(mlone.exe ${SOURCES})
-# enable_testing() 
-# add_executable(test.exe ${TESTSRC} ${TESTSRCCPP})
-#
-# target_link_libraries(
-#   test.exe
-#   GTest::gtest_main
-# )
-#
-# include(GoogleTest)
-# gtest_discover_tests(test.exe)
+ enable_testing() 
+ add_executable(test.exe ${TESTSRC} ${TESTSRCCPP})
+
+ target_link_libraries(
+   test.exe
+   GTest::gtest_main
+ )
+
+ include(GoogleTest)
+ gtest_discover_tests(test.exe)
